# rag_mcp

./: .gitignore  CLAUDE.md  devspec.md  pyproject.toml  requirements.txt
.claude/skills/: auto-coder.skill
.claude/skills/auto-coder/: SKILL.md
.claude/skills/auto-coder/references/: code-standards.md  spec-format.md  user-guide.md
.claude/skills/auto-coder/scripts/: code_analyzer.py  document.py  find_task.py  implement.py  persist.py  sync_spec.py  test_fix.py
config/: settings.yaml
specs/: 01-核心特点.md  01-目录.md  02-rag策略与设计亮点.md  02-项目概述.md  03-全链路可插拔架构.md  03-核心特点.md  04-mcp生态集成.md  05-rag-核心流水线设计.md  05-多模态图像处理.md  06-可观测性与可评估体系.md  06-系统架构与模块设计.md  07-业务课扩展性.md  07-整体架构图.md  08-技术选型.md  08-目录结构.md  09-rag核心流水线设计.md  09-项目开发排期.md  10-mcp服务设计.md  10-项目概要.md  11-可插拔架构设计.md  12-可观测性与追踪设计-observability-tracing-design.md  12-阶段划分.md  13-多模态图片处理设计.md  14-测试方案.md  15-系统架构与模块设计.md  15-进度跟踪.md  16-项目开发排期.md  16-验收标准总结.md  17-项目概述.md  18-开发原则.md  19-阶段划分.md  20-skills-创建计划.md  21-依赖关系总览.md  22-进度跟踪.md  24-备注.md  task_index.json  test_report_task-001.json
src/core/: settings.py  types.py
tests/: conftest.py
tests/fixtures/: __init__.py
tests/unit/: test_settings.py  test_types.py
